# HRG_maxClique

./: .gitignore  README.md
code/: CMakeLists.txt
code/include/: BipartiteIndep.hpp  CNEEObuilder.hpp  Graph.hpp  MaximalClique.hpp  MaximumClique.hpp  Reduction.hpp  VertexCover.hpp
code/src/: BipartiteIndep.cpp  CNEEObuilder.cpp  Graph.cpp  MaximalClique.cpp  MaximumClique.cpp  Reduction.cpp  VertexCover.cpp  vertexCover.cpp
code/test/: dataset_get_metadata.cpp  maxCliquetest.sh  realdata_test.sh  reduction_test.cpp  reduction_test.sh  solve_general_test.cpp  solve_geo_test.cpp  solve_geomtry.cpp  solve_no_geometry.cpp  solve_nongeo_test.cpp
gen_dataset/: dataset_get_metadata  dataset_get_metadata.cpp  graph_gen.sh  graph_generator.sh
real_dataset/: Gnutella31_out.txt  com-amazon_out.txt  com-dblp_out.txt  data_remap.cpp
results/reduction_diff_C/: 1000000_075_11.txt  1000000_075_13.txt  1000000_075_15.txt  1000000_075_7.txt  1000000_075_9.txt  100000_075_11.txt  100000_075_13.txt  100000_075_15.txt  100000_075_7.txt  100000_075_9.txt  10000_075_11.txt  10000_075_13.txt  10000_075_15.txt  10000_075_7.txt  10000_075_9.txt  1000_075_11.txt  1000_075_13.txt  1000_075_15.txt  1000_075_7.txt  1000_075_9.txt  100_075_11.txt  100_075_13.txt  100_075_15.txt  100_075_7.txt  100_075_9.txt  133000_075_11.txt  133000_075_13.txt  133000_075_15.txt  133000_075_7.txt  133000_075_9.txt  13300_075_11.txt  13300_075_13.txt  13300_075_15.txt  13300_075_7.txt  13300_075_9.txt  1330_075_11.txt  1330_075_13.txt  1330_075_15.txt  1330_075_7.txt  1330_075_9.txt  (+125 more)
results/reduction_diff_alpha/: 10000000_055.txt  10000000_060.txt  10000000_065.txt  10000000_070.txt  10000000_075.txt  10000000_080.txt  10000000_085.txt  10000000_090.txt  1000000_060.txt  1000000_070.txt  1000000_075.txt  1000000_080.txt  1000000_090.txt  100000_055.txt  100000_060.txt  100000_070.txt  100_055.txt  (+292 more)
src/: CMakeLists.txt  CNEEObuilder.cpp  CNEEObuilder.hpp  Maximumclique.cpp  dataset_get_metadata.cpp  maxCliquetest.sh  reduction.cpp  vertexCover.cpp  vertexCover.hpp
src_backup/: CNEEObuilder.cpp  Maximumclique.hpp  reduction.hpp
src_working/: CNEEObuilder.cpp  CNEEObuilder.hpp  Graph.hpp  MaximalClique.cpp  MaximalClique.hpp  Maximumclique.cpp  Maximumclique.hpp  reduction.cpp  reduction.hpp  reduction_test.sh  vertexCover.hpp
visualizer/: CNEEO_test.ipynb  HRG_visulizer.ipynb  clique_visualizer copy.ipynb  clique_visualizer.ipynb  reduction_test.ipynb  running_time_test.ipynb
(+490 files in other folders)
